@@ -162,7 +162,7 @@ module Devise
 
   # When set to true, signing out an user signs out all other scopes.
   mattr_accessor :sign_out_all_scopes
-  @@sign_out_all_scopes = false
+  @@sign_out_all_scopes = true
 
   # The default method used while signing out
   mattr_accessor :sign_out_via
